--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "almost-everything",
   "version": "0.0.1",
   "description": "App to help with the hiring and onboarding of crew personnel.",
-  "scripts": {},
+  "scripts": {
+    "prebuild": "npm run build-builder",
+    "build": "NODE_ENV=production node config/build",
+    "build-builder": "tsc -p config/build",
+    "prerun-builder": "npm run build-builder",
+    "run-builder": "node config/build"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aryzing/almost-everything.git"
@@ -12,5 +18,25 @@
   "bugs": {
     "url": "https://github.com/aryzing/almost-everything/issues"
   },
-  "homepage": "https://github.com/aryzing/almost-everything#readme"
+  "homepage": "https://github.com/aryzing/almost-everything#readme",
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
+    "@types/webpack": "^4.4.20",
+    "@types/webpack-dev-server": "^3.1.1",
+    "babel-loader": "^8.0.4",
+    "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.2.2",
+    "webpack": "^4.27.1",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
