--- a/package.json
+++ b/package.json
@@ -38,11 +38,25 @@
     "@types/webpack-dev-server": "^3.1.1",
     "babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-dev-server": "^3.1.10"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts?(x)": [
+      "tslint --fix -c config/lintingAndFormatting/tslint.json",
+      "prettier --write --loglevel=warn --config config/lintingAndFormatting/.prettierrc",
+      "git add"
+    ]
   }
 }
