--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "run-builder": "node config/build",
     "lint": "tslint --fix -c config/lintingAndFormatting/tslint.json \"src/**/*.ts?(x)\"",
     "format": "prettier --write --loglevel=warn --config config/lintingAndFormatting/.prettierrc \"src/**/*.ts?(x)\"",
-    "lintAndFormat": "npm run lint && npm run format"
+    "lintAndFormat": "npm run lint && npm run format",
+    "test": "jest -c config/tests/jest.config.unit.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.10",
     "@types/react": "^16.7.13",
     "@types/react-dom": "^16.0.11",
     "@types/webpack": "^4.4.20",
@@ -39,8 +41,10 @@
     "babel-loader": "^8.0.4",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.0",
+    "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
+    "ts-jest": "^23.10.5",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2",
@@ -49,7 +53,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
