--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/webpack-dev-server": "^3.1.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.9.2",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
