--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.2",
+    "styled-reset": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
