--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prebuild": "npm run build-builder",
     "build": "NODE_ENV=production node config/build",
     "dev": "docker-compose -p almost-everything -f config/docker/docker-compose.yml up",
+    "prebuild-builder": "npm i",
     "build-builder": "tsc -p config/build",
     "prerun-builder": "npm run build-builder",
     "run-builder": "node config/build",
