--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/webpack-env": "^1.13.6",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.9.2",
+    "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.0",
